fixed small bug with text overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,6 +76,8 @@ ol {
 	padding: 20px;
 	margin: 20px 0;
 	line-height: 2.3;
+	overflow: hidden;
+	white-space: normal;
 }
 
 .blog-body h1 {
